# elevator

./: CMakeLists.txt  README.md
ControlBox/: ControlBox.ino
Doors/Door Sensor/: IRSensor.hpp  irSensor.cpp
Doors/Door Servo/: DoorServo.cpp  DoorServo.hpp
External libraries for arduino/: readme.txt
Motor&Sensors/MainMotor/: MainMotor.ino
Motor&Sensors/Sensors/: Sensors.ino
elevatorCore/: Control_Logic.cpp  Control_Logic.h  DummyLibs.h  FSM.cpp  FSM.h  Globals.cpp  Globals.h  MainMotor.cpp  MainMotor.h  MotorSensors.cpp  MotorSensors.h  Path_Finder.cpp  Path_Finder.h  elevatorCore.ino
